# observeAI

./: .bazelignore  .bazelrc  .dockerignore  .env.example  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  alembic.ini  cortex-config.yml  docker-compose.observability.yml  promtail-config.yml  pyproject.toml  requirements_lock.txt
.github/workflows/: bazel.yml
alembic/: BUILD.bazel  env.py
alembic/versions/: 20251228_000001_001_initial_schema.py  20251230_104337_f0f550789f89_add_rca_completed_at_to_incidents.py
containers/: BUILD.bazel
dashboard/: BUILD.bazel  build.sh  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  types.ts
dashboard/src/api/: client.ts
dashboard/src/pages/: IncidentDetailPage.tsx  IncidentsPage.tsx
dashboard/src/types/: index.ts
docker/: Dockerfile  cortex-config.yaml  docker-compose.yaml
docs/: DEVELOPMENT.md  cross-namespace-correlation-test.md
prometheus/: alertmanager.yml  prometheus.yml
prometheus/alerts/: host_alerts.yml  network_alerts.yml  service_alerts.yml
prompts/: network_engineer.md
scripts/: db-reset.sh  deploy-stop.sh  deploy.sh  dev.sh  inject_test_data.py
specs/001-multi-agent-rca/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-rca/checklists/: requirements.md
specs/001-multi-agent-rca/contracts/: openapi.yaml
specs/002-bazel-build-infra/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bazel-build-infra/checklists/: requirements.md
specs/002-bazel-build-infra/contracts/: README.md
specs/003-rca-test-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rca-test-suite/checklists/: requirements.md
specs/003-rca-test-suite/contracts/: api-endpoints.md
src/: BUILD.bazel  __init__.py  config.py  database.py  main.py
src/api/: BUILD.bazel  __init__.py  routes.py  schemas.py
src/models/: BUILD.bazel  __init__.py  alert.py  base.py  incident.py  rca_report.py
src/services/: BUILD.bazel  __init__.py  alert_service.py  cache.py  correlation_service.py  cortex_client.py  incident_service.py  loki_client.py  rca_agent.py  report_service.py  semantic_correlator.py  webhook.py
src/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py
src/tools/: BUILD.bazel  __init__.py  generate_report.py  query_cortex.py  query_loki.py
tests/: BUILD.bazel  __init__.py  conftest.py
tests/fixtures/: __init__.py  alert_batch_3.json  alert_duplicate.json  alert_malformed.json  alert_single_firing.json  alert_single_resolved.json  alerts_different_services_2.json  alerts_same_service_2.json  alerts_semantic_similar.json  loader.py
tests/integration/: BUILD.bazel  test_correlation_e2e.py  test_rca_e2e.py  test_webhook_e2e.py
tests/stress/: __init__.py  test_concurrent_rca_stress.py  test_high_volume.py
tests/unit/: BUILD.bazel  __init__.py  test_api_endpoints.py  test_concurrent_rca.py  test_correlation_service.py  test_cortex_tool.py  test_database_operations.py  test_error_handling.py  test_loki_tool.py  test_rca_agent.py  test_report_service.py  test_schemas.py  test_tools.py  test_webhook.py
tools/: workspace_status.sh
