# =============================================================================
# BUILD file for tools package
# =============================================================================

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "tools_lib",
    srcs = glob(["**/*.py"]),
    deps = [
        "@pip//httpx",
        "@pip//pydantic",
    ],
)
